syntax = "proto3";

package metrics;

option go_package = "metrics-and-alerting-service/proto/metrics";

message MetricData {
  string name = 1;
  string type = 2;

  oneof metric_value {
    int64 delta = 3;
    double value = 4;
  }
}

message MetricInfo {
  string name = 1;
  string type = 2;
}

message UpdateMetricRequest {
  MetricData metric = 1;
}

message UpdateMetricResponse {
  MetricData metric = 1;
}

message UpdateMetricsBatchRequest {
  repeated MetricData metrics = 1;
}

message GetMetricRequest {
  MetricInfo metric = 1;
}

message GetMetricResponse {
  MetricData metric = 1;
}

message GetMetricsResponse {
  string metrics = 1;
}
